# claudfolio

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  STRATEGY.md  TODOS.md  pyproject.toml
config/: sources.yaml  watchlist.yaml
docs/agents/: issue-tracker.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.test.ts  api.ts  styles.css  types.ts  util.test.ts  util.ts
frontend/src/components/: AllocationChart.tsx  EquityCurve.tsx  Loader.test.tsx  Loader.tsx
frontend/src/pages/: Briefing.test.tsx  Portfolio.tsx  TickerDetail.test.tsx  TickerDetail.tsx  Trades.tsx  Watchlist.test.tsx
src/: bootstrap.py  core.py  pipeline.py
src/agent/: dashboard.py  harness.py  tools.py
src/agent/prompts/: portfolio_agent.txt  sentiment_agent.txt
src/agent/sub_agents/: base.py  sentiment.py
src/api/: main.py  schemas.py
src/delivery/: dashboard.py  email_sender.py  slack_webhook.py
src/engines/enrichment/: aggregator.py  analyst_revisions.py  congressional.py  event_calendar.py  insider_trades.py  options_flow.py  sector_relative.py  short_interest.py
src/engines/quantitative/: aggregator.py  features.py  model.py  price_fetcher.py  technicals.py
src/engines/sentiment/: aggregator.py  news_fetcher.py  scorer.py  sec_fetcher.py  social_fetcher.py
src/mcp_server/: __init__.py  server.py
src/meta/: formatter.py  llm_client.py  payload_builder.py
src/meta/prompts/: daily_briefing.txt
src/storage/: db.py  models.py  retention.py
src/tui/: app.py
tests/: conftest.py  test_agent.py  test_api.py  test_api_background.py  test_core.py  test_dashboard.py  test_enrichment_fetchers.py  test_harness.py  test_meta.py  test_pipeline_cli.py  test_quantitative.py  test_retention.py  test_sentiment.py
